--- a/style.css
+++ b/style.css
@@ -40,5 +40,15 @@ nav ul li a {
 nav ul li a:hover {
   text-decoration: underline;
 }
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #f0f0f0;
+  text-align: center;
+  padding: 10px 0;
+}
+
   
   
